--- a/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-4-express-http-com-nodejs/Exercicios/package.json
+++ b/back-end/bloco-22-introducao-ao-desenvolvimento-web-com-nodejs/dia-4-express-http-com-nodejs/Exercicios/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha tests",
-    "dev": "nodemon index.js"
+    "dev": "nodemon indexDigimon.js"
   },
   "keywords": [],
   "author": "",
